# parallel-playback

./: CHANGELOG.md  Cargo.toml  README.md  shell.nix  test-config.json
clients/common/: style.css
clients/common/video/: ready.webm
clients/host/: index.html  index.js
clients/join/: index.html  index.js
src/: comms.rs  config.rs  main.rs  timing.rs
src/comms/: message.rs
