[package]
name = "parallel-playback"
version = "0.1.1"
authors = ["octalsrc <nicklewchenko92@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
